--- a/mystenlabs-site/src/team-members/TeamMembersSection.module.scss
+++ b/mystenlabs-site/src/team-members/TeamMembersSection.module.scss
@@ -1,3 +1,7 @@
+.people {
+    justify-items: stretch;
+}
+
 .team-actions {
     display: flex;
     justify-content: center;
